--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   "author": "Md. Arafatuzzaman",
   "license": "MIT",
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.12",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.10"
   }
-} 
+}
