--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/(?!assets/|favicon\\.ico|.*\\.pdf|.*\\.png|.*\\.jpg|.*\\.svg)(.*)",
       "destination": "/index.html"
     }
   ],
